@@ -787,8 +787,8 @@ public class MinecraftImageGenerator {
 				switch (armorPieces.size()) {
 				case 1:
 					graphics2D.drawImage(
-							ImageUtils.resizeAA(ImageUtils.autoCropTile(ImageIO.read(armorPieces.get(0))), 28), 0, 0,
-							null);
+							ImageUtils.resizeAA(ImageUtils.autoCropTile(ImageIO.read(armorPieces.getFirst())), 28), 0,
+							0, null);
 					break;
 				case 2:
 					graphics2D.drawImage(
@@ -1425,7 +1425,7 @@ public class MinecraftImageGenerator {
 				if (tex != null) {
 					tex1 = ImageUtils.resizeAA(tex, drawWidth1, drawHeight1);
 				} else {
-					tex1 = ImageUtils.resizeAA(rantex.get(0), drawWidth1, drawHeight1);
+					tex1 = ImageUtils.resizeAA(rantex.getFirst(), drawWidth1, drawHeight1);
 				}
 				graphics2D.drawImage(tex1, 6 - drawWidth1 / 2, 3 - drawHeight1 / 2, null);
 
