@@ -65,7 +65,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 	private boolean changed, listeningEnabled = false;
 	private final ModElementChangedListener elementUpdateListener;
 
-	@Nonnull protected ModElement modElement;
+	@Nonnull protected final ModElement modElement;
 	@Nullable private FolderElement targetFolder;
 
 	private ModElementCreatedListener<GE> modElementCreatedListener;
@@ -333,8 +333,9 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 				toolBarLeft.add(codeViewer);
 			}
 
-			add("North", ComponentUtils.applyPadding(PanelUtils.westAndEastElement(toolBarLeft, toolBar), 5, true, false, true,
-					false));
+			add("North",
+					ComponentUtils.applyPadding(PanelUtils.westAndEastElement(toolBarLeft, toolBar), 5, true, false,
+							true, false));
 
 			centerComponent = PanelUtils.centerAndSouthElement(parameters = split, pager);
 		} else {
@@ -390,10 +391,10 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 			}
 
 			add("North",
-					ComponentUtils.applyPadding(PanelUtils.westAndEastElement(toolBarLeft, toolBar), 5, true, false, true,
-							false));
+					ComponentUtils.applyPadding(PanelUtils.westAndEastElement(toolBarLeft, toolBar), 5, true, false,
+							true, false));
 
-			centerComponent = new ArrayList<>(pages.values()).get(0);
+			centerComponent = new ArrayList<>(pages.values()).getFirst();
 		}
 
 		if (modElementCodeViewer != null) {
@@ -463,7 +464,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 					else // exclude the component itself
 						UnsupportedComponent.markUnsupported(c);
 				} catch (IllegalAccessException | NoSuchFieldException | NullPointerException e) {
-					LOG.warn("Failed to access component: " + entry, e);
+					LOG.warn("Failed to access component: {}", entry, e);
 				}
 			}
 
